docs/docker-registry/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: ca-cluster-issuer
  name: docker-registry
  namespace: docker-registry
spec:
  tls:
  - hosts:
    - registry.k8s.local
    secretName: registry-k8s-local-tls
  rules:
  - host: registry.k8s.local
    http:
      paths:
      - backend:
          serviceName: registry
          servicePort: 5000
        path: /
